styles/app.css
/* ... */
body {
  display: grid;
  --nav-bar-height: 80px;
  --bottom-bar-height: calc(var(--nav-bar-height) + var(--section-title-height));
  grid-template-rows: 1fr var(--bottom-bar-height);
  grid-template-columns: 1fr;
  margin: 0;
  font-family: 'Roboto', system-ui;
}

body[data-no-search] {
  --bottom-bar-height: var(--nav-bar-height);
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! BARRE DE NAVIGATION !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

nav {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  display: grid;
  --nombre-sections: 4;
  grid-template-rows: var(--section-title-height) 1fr;
  grid-template-columns: repeat(var(--nombre-sections), 1fr);
  align-items: center;
  background-color: var(--nav-bg-color);
  z-index: var(--z-nav);
}

nav > search-box::part(form) {
  grid-row: 1;
  grid-column: 1 / -1;
  padding-inline: 8px;
  margin: auto;
  width: 100%;
  box-sizing: border-box;
}

nav > search-box::part(input) {
  --elevation-opacity: var(--elevation-5-opacity);
}

body[data-no-search] nav {
  grid-template-rows: 1fr;
}

body[data-no-search] nav > search-box {
  display: none;
}

.nav-link.search-button {
  display: none;
  grid-column: 3;
  grid-row: 1;
}

.nav-link {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  gap: 4px;
  text-decoration: none;
  font-weight: 500;
  position: relative;
  overflow: hidden;
  outline-offset: -3px;
  height: 100%;
  box-sizing: border-box;
  padding-top: 12px;
  padding-bottom: 16px;
  color: rgb(var(--on-surface-variant));
}

.nav-link>* {
  z-index: 1;
}

@keyframes bulle-nav {
  0% { opacity: calc(1 * .16); transform: scale(0); }
  90% { opacity: calc(.4 * .16); }
  100% { opacity: 0; transform: scale(1); }
}

.nav-link::before {
  content: '';
  display: block;
  position: absolute;
  transform: scale(0);
  transform-origin: var(--transform-origin, center center);
  --size: calc(90vw / var(--nombre-sections));
  width: var(--size);
  height: var(--size);
  background-color: var(--nav-bubble-color);
  border-radius: 50%;
  z-index: 0;
}

.nav-link.only-pc {
  display: none;
}

.nav-link.bubbly::before {
  animation: bulle-nav .3s var(--easing-decelerate);
}

.nav-link shiny-stars {
  --size: 1.2em;
}

.nav-link .material-icons {
  height: 32px;
  width: 64px;
  border-radius: 16px;
  display: flex;
  place-items: center;
  justify-content: center;
  background-color: rgb(var(--icon-surface, 0 0 0 0));
  color: rgb(var(--icon-color, var(--on-surface-variant)));
  --elevation-opacity: 0;
  --state-opacity: 0;
}

/*.nav-link:is(:focus, :hover, :active) {
  --icon-surface: var(--secondary-container);
  --icon-color: var(--on-secondary-container);
}*/

body[data-section-actuelle~="mes-chromatiques"] .nav-link[data-nav-section="mes-chromatiques"],
body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="pokedex"],
body[data-section-actuelle~="chasses-en-cours"] .nav-link[data-nav-section="chasses-en-cours"],
body[data-section-actuelle~="partage"] .nav-link[data-nav-section="partage"],
body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="mes-chromatiques"],
body[data-section-actuelle~="parametres"] .nav-link[data-nav-section="parametres"],
body[data-section-actuelle~="a-propos"] .nav-link[data-nav-section="parametres"] {
  color: rgb(var(--on-surface));
  --icon-surface: var(--secondary-container);
  --icon-color: var(--on-secondary-container);
}

.search-button > .material-icons {
  padding: 0.3rem 0.8rem;
  border-radius: 50px;
  background-color: var(--nav-text-color);
  color: var(--nav-bg-color);
}

.lien-section,
.bouton-retour {
  cursor: pointer;
}

.lien-section > sync-progress,
.sous-titre > sync-line {
  position: absolute;
}

nav > a > span {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 90%;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! SECTIONS PRINCIPALES !!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

main {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  overflow-x: hidden;
  overflow-y: hidden;
  position: relative;
  height: 100%;
}

section {
  display: none;
  overflow-anchor: none;
  height: 100%;
  overflow: hidden;
}

main > section {
  grid-template-rows: var(--section-title-height) auto;
}

main > section.on,
body[data-section-actuelle~="mes-chromatiques"] #mes-chromatiques,
body[data-section-actuelle~="pokedex"] #pokedex,
body[data-section-actuelle~="chasses-en-cours"] #chasses-en-cours,
body[data-section-actuelle~="corbeille"] #corbeille,
body[data-section-actuelle~="partage"] #partage,
body[data-section-actuelle~="chromatiques-ami"] #chromatiques-ami,
body[data-section-actuelle~="parametres"] #parametres,
body[data-section-actuelle~="a-propos"] #a-propos,
body[data-section-actuelle~="sprite-viewer"] #sprite-viewer,
body[data-section-actuelle~="obfuscator"] #obfuscator {
  display: grid;
}

h1 {
  all: unset;
  white-space: nowrap;
}

.section-titre {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  font-size: 1.5rem;
  font-weight: 400;
  padding: 8px 16px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  gap: 8px;
  position: sticky;
  top: 0;
  z-index: var(--z-section-titre);
}

.section-titre>* {
  z-index: 1;
}

.spacer {
  flex-grow: 1;
}

#parametres .spacer {
  min-height: 48px;
}

.section-titre.with-button {
  padding-left: 0;
}

.section-titre search-box {
  display: none;
}

.titre-icones {
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  gap: 8px;
  margin-left: auto;
}

.titre-icones > .icone {
  width: 48px;
  height: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.icone.bouton-retour {
  width: 56px;
  height: 56px;
}

.bouton-retour,
.reset-icon {
  outline-offset: -3px;
}
/* ... */

